--- a/conf/test.config
+++ b/conf/test.config
@@ -20,10 +20,7 @@ params {
     max_time   = '6.h'
 
     // Input data
-    // TODO nf-core: Specify the paths to your test data on nf-core/test-datasets
-    // TODO nf-core: Give any required params for the test so that command line flags are not needed
-    input  = 'https://raw.githubusercontent.com/nf-core/test-datasets/viralrecon/samplesheet/samplesheet_test_illumina_amplicon.csv'
-
-    // Genome references
-    genome = 'R64-1-1'
+    input_simulate  = 'tests/csv/sample_sim.csv'
+    input_region    = 'tests/csv/regionsheet.csv'
+    genomes          = "CanFam3"
 }
