--- a/nextflow.config
+++ b/nextflow.config
@@ -6,12 +6,35 @@
 ----------------------------------------------------------------------------------------
 */
 
+// Plugins used
+plugins {
+  id 'nf-validation@0.2.1'
+}
+
 // Global default params, used in configs
 params {
-    // Boilerplate options
+    // TODO nf-core: Specify your pipeline's command line flags
+    // Input options
     input                      = null
+    input_region               = null
+    // References
+    genome                     = null
+    igenomes_base              = 's3://ngi-igenomes/igenomes'
+    igenomes_ignore            = false
+
+    // Mode simulate parameters
+    input_simulate             = null
+    depth                      = [0.2, 0.5, 1]
+
+    // MultiQC options
+    multiqc_config             = null
+    multiqc_title              = null
+    multiqc_logo               = null
+    max_multiqc_email_size     = '25.MB'
+    multiqc_methods_description = null
+
+    // Boilerplate options
     outdir                     = null
-    tracedir                   = "${params.outdir}/pipeline_info"
     publish_dir_mode           = 'copy'
     email                      = null
     email_on_fail              = null
@@ -20,26 +43,28 @@ params {
     hook_url                   = null
     help                       = false
     version                    = false
-    validate_params            = true
-    show_hidden_params         = false
-    schema_ignore_params       = 'genomes'
-    joint_germline             = false
-
 
     // Config options
+    config_profile_name        = null
+    config_profile_description = null
     custom_config_version      = 'master'
     custom_config_base         = "https://raw.githubusercontent.com/nf-core/configs/${params.custom_config_version}"
-    config_profile_description = null
     config_profile_contact     = null
     config_profile_url         = null
-    config_profile_name        = null
 
 
     // Max resource options
     // Defaults only, expecting to be overwritten
-    max_memory                 = '10.GB'
-    max_cpus                   = 2
+    max_memory                 = '128.GB'
+    max_cpus                   = 16
     max_time                   = '240.h'
+
+    // Schema validation default options
+    validationFailUnrecognisedParams = false
+    validationLenientMode            = false
+    validationSchemaIgnoreParams     = 'genomes'
+    validationShowHiddenParams       = false
+    validate_params                  = true
 
 }
 
@@ -148,19 +173,19 @@ process.shell = ['/bin/bash', '-euo', 'pipefail']
 def trace_timestamp = new java.util.Date().format( 'yyyy-MM-dd_HH-mm-ss')
 timeline {
     enabled = true
-    file    = "${params.tracedir}/execution_timeline_${trace_timestamp}.html"
+    file    = "${params.outdir}/pipeline_info/execution_timeline_${trace_timestamp}.html"
 }
 report {
     enabled = true
-    file    = "${params.tracedir}/execution_report_${trace_timestamp}.html"
+    file    = "${params.outdir}/pipeline_info/execution_report_${trace_timestamp}.html"
 }
 trace {
     enabled = true
-    file    = "${params.tracedir}/execution_trace_${trace_timestamp}.txt"
+    file    = "${params.outdir}/pipeline_info/execution_trace_${trace_timestamp}.txt"
 }
 dag {
     enabled = true
-    file    = "${params.tracedir}/pipeline_dag_${trace_timestamp}.html"
+    file    = "${params.outdir}/pipeline_info/pipeline_dag_${trace_timestamp}.html"
 }
 
 manifest {
@@ -169,7 +194,7 @@ manifest {
     homePage        = 'https://github.com/nf-core/phaseimpute'
     description     = """Phasing and imputation pipeline"""
     mainScript      = 'main.nf'
-    nextflowVersion = '!>=22.10.1'
+    nextflowVersion = '!>=23.04.0'
     version         = '1.0dev'
     doi             = ''
 }
