Delete input from test

--- a/nextflow.config
+++ b/nextflow.config
@@ -14,17 +14,11 @@ plugins {
 // Global default params, used in configs
 params {
     // TODO nf-core: Specify your pipeline's command line flags
-    // Input options
-    input                      = null
-    input_region               = null
     // References
     genome                     = null
     igenomes_base              = 's3://ngi-igenomes/igenomes'
     igenomes_ignore            = false
 
-    // Mode simulate parameters
-    input_simulate             = null
-    depth                      = [0.2, 0.5, 1]
 
     // MultiQC options
     multiqc_config             = null
@@ -70,6 +64,9 @@ params {
 
 // Load base.config by default for all pipelines
 includeConfig 'conf/base.config'
+
+// Load base.config by default for all pipelines
+includeConfig 'conf/igenomes.config'
 
 // Load nf-core custom profiles from different Institutions
 try {
