--- a/conf/test.config
+++ b/conf/test.config
@@ -22,5 +22,5 @@ params {
     // Input data
     input_simulate  = 'tests/csv/sample_sim.csv'
     input_region    = 'tests/csv/regionsheet.csv'
-    genomes          = "CanFam3"
+    depth           = "[1, 2]"
 }
