--- a/tests/test_default.yml
+++ b/tests/test_default.yml
@@ -1,5 +1,5 @@
 - name: Run default pipeline
-  command: nextflow run main.nf -profile test --outdir results
+  command: nextflow run main.nf -profile test --outdir results --genome GRCh37
   tags:
     - default
   files:
