--- a/conf/test.config
+++ b/conf/test.config
@@ -20,7 +20,13 @@ params {
     max_time   = '6.h'
 
     // Input data
-    input_simulate  = 'tests/csv/sample_sim.csv'
-    input_region    = 'tests/csv/regionsheet.csv'
-    depth           = "[1, 2]"
+    input           = "tests/csv/sample_sim.csv"
+    input_region    = "tests/csv/regionsheet.csv"
+    depth           = [1, 2]
+    outdir          = "results/test"
+    genome          = "GRCh38"
+    map             = "/mnt/s/Users/Main/Documents/Louis/Travail/IGDR/EnCours/test-datasets/data/genetic_maps.b38/chr21.b38.gmap.gz"
+    fasta           = "/mnt/s/Users/Main/Documents/Louis/Travail/IGDR/EnCours/test-datasets/data/reference_genome/hs38DH.chr21.fa"
+
+    step            = "simulate"
 }
