--- a/nextflow.config
+++ b/nextflow.config
@@ -13,12 +13,20 @@ plugins {
 
 // Global default params, used in configs
 params {
-    // TODO nf-core: Specify your pipeline's command line flags
+    
+    // step
+    step                       = 'all'
+    input                      = null
+
     // References
     genome                     = null
     igenomes_base              = 's3://ngi-igenomes/igenomes'
     igenomes_ignore            = false
+    map                        = null
 
+    // Simulate
+    depth                      = [1, 2]
+    input_region               = null
 
     // MultiQC options
     multiqc_config             = null
