Add prefix for view depth and region

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -25,5 +25,15 @@ process {
             pattern: '*_versions.yml'
         ]
     }
+    withName: VIEW_DEPTH {
+        ext.args = [
+        ].join(' ')
+        ext.prefix = { "${meta.id}_D${meta.depth}" }
+    }
+    withName: VIEW_REGION {
+        ext.args = [
+        ].join(' ')
+        ext.prefix = { "${meta.id}_R${meta.region}" }
+    }
 
 }
