Rename bam simulate to bam downsample

--- a/conf/test_sim.config
+++ b/conf/test_sim.config
@@ -5,13 +5,13 @@
     Defines input files and everything required to run a fast and simple pipeline test.
 
     Use as follows:
-        nextflow run nf-core/phaseimpute -profile test,<docker/singularity> --outdir <OUTDIR>
+        nextflow run nf-core/phaseimpute -profile test_sim,<docker/singularity> --outdir <OUTDIR>
 
 ----------------------------------------------------------------------------------------
 */
 
 params {
-    config_profile_name        = 'Test profile'
+    config_profile_name        = 'Test simulation mode'
     config_profile_description = 'Minimal test dataset to check pipeline function'
 
     // Limit resources so that this can run on GitHub Actions
@@ -23,7 +23,7 @@ params {
     input           = "tests/csv/sample_sim.csv"
     input_region    = "tests/csv/regionsheet.csv"
     depth           = [1, 2]
-    outdir          = "results/test"
+    outdir          = "results/test_sim"
     genome          = "GRCh38"
 
     map             = "/groups/dog/llenezet/test-datasets/data/genetic_maps.b38/chr21.b38.gmap.gz"
