Change input names

--- a/conf/test_panelprep.config
+++ b/conf/test_panelprep.config
@@ -20,14 +20,14 @@ params {
     max_time   = '6.h'
 
     // Input data
-    input           = "tests/csv/panel.csv"
-    input_region    = "tests/csv/regionsheet.csv"
-    outdir          = "results/test_panelprep"
-    genome          = "GRCh38"
+    input              = "tests/csv/panel.csv"
+    input_region_file  = "tests/csv/regionsheet.csv"
+    outdir             = "results/test_panelprep"
+    genome             = "GRCh38"
 
-    map             = "/groups/dog/llenezet/test-datasets/data/genetic_maps.b38/chr21.b38.gmap.gz"
-    fasta           = "/groups/dog/llenezet/test-datasets/data/reference_genome/hs38DH.chr21.fa"
+    map                = "/groups/dog/llenezet/test-datasets/data/genetic_maps.b38/chr21.b38.gmap.gz"
+    fasta              = "/groups/dog/llenezet/test-datasets/data/reference_genome/hs38DH.chr21.fa"
 
-    step            = "panelprep"
-    tools           = ["glimpse2", "glimpse1"]
+    step               = "panelprep"
+    tools              = ["glimpse2", "glimpse1"]
 }
