--- a/conf/test_sim.config
+++ b/conf/test_sim.config
@@ -20,14 +20,14 @@ params {
     max_time   = '6.h'
 
     // Input data
-    input           = "tests/csv/sample_sim.csv"
-    input_region    = "tests/csv/regionsheet.csv"
-    depth           = [1, 2]
-    outdir          = "results/test_sim"
-    genome          = "GRCh38"
+    input                = "tests/csv/sample_sim.csv"
+    input_region_file    = "tests/csv/regionsheet.csv"
+    depth                = [1, 2]
+    outdir               = "results/test_sim"
+    genome               = "GRCh38"
 
-    map             = "/groups/dog/llenezet/test-datasets/data/genetic_maps.b38/chr21.b38.gmap.gz"
-    fasta           = "/groups/dog/llenezet/test-datasets/data/reference_genome/hs38DH.chr21.fa"
+    map                  = "/groups/dog/llenezet/test-datasets/data/genetic_maps.b38/chr21.b38.gmap.gz"
+    fasta                = "/groups/dog/llenezet/test-datasets/data/reference_genome/hs38DH.chr21.fa"
 
-    step            = "simulate"
+    step                 = "simulate"
 }
