--- a/nextflow.config
+++ b/nextflow.config
@@ -16,7 +16,8 @@ params {
     
     // step
     step                       = 'all'
-    input                      = null
+    input_region_string        = null
+    input_region_file         = "assets/regionsheet.csv"
 
     // References
     genome                     = null
@@ -26,7 +27,7 @@ params {
 
     // Simulate
     depth                      = [1, 2]
-    input_region               = null
+    genotype                   = null
 
     // MultiQC options
     multiqc_config             = null
