--- a/conf/test_panelprep.config
+++ b/conf/test_panelprep.config
@@ -21,7 +21,7 @@ params {
 
     // Input data
     input              = "tests/csv/panel.csv"
-    input_region_file  = "tests/csv/regionsheet.csv"
+    input_region       = "tests/csv/regionsheet.csv"
     outdir             = "results/test_panelprep"
     genome             = "GRCh38"
 
