--- a/nextflow.config
+++ b/nextflow.config
@@ -10,17 +10,18 @@
 params {
     
     // step
-    step                       = 'all'
-    input_region_string        = null
-    input_region_file         = "assets/regionsheet.csv"
+    step                       = null
+    input_region               = 'all'
 
     // Input options
     input                      = null
+    map                        = null
+
     // References
     genome                     = null
     igenomes_base              = 's3://ngi-igenomes/igenomes/'
     igenomes_ignore            = false
-    fasta                      = null 
+
     // MultiQC options
     multiqc_config             = null
     multiqc_title              = null
@@ -29,7 +30,7 @@ params {
     multiqc_methods_description = null
 
     // Simulate
-    depth                      = [1, 2]
+    depth                      = null
     genotype                   = null
 
     // Boilerplate options
