--- a/conf/test.config
+++ b/conf/test.config
@@ -22,8 +22,14 @@ params {
     // Input data
     // TODO nf-core: Specify the paths to your test data on nf-core/test-datasets
     // TODO nf-core: Give any required params for the test so that command line flags are not needed
-    input  = 'https://raw.githubusercontent.com/nf-core/test-datasets/viralrecon/samplesheet/samplesheet_test_illumina_amplicon.csv'
+    input  = "../test-datasets/data/bam.csv"
 
     // Genome references
-    genome = 'R64-1-1'
+    genome = "GRCh38"
+    panel  = "https://raw.githubusercontent.com/nf-core/test-datasets/imputation/data/panel/21/1000GP.chr21.noNA12878.s.bcf"
+    to_phase = false
+
+    // Impute parameters
+    step   = "impute"
+    tools  = "glimpse1"
 }
