Set depth as integer Improve schema and config Add map channel

--- a/nextflow.config
+++ b/nextflow.config
@@ -10,53 +10,60 @@
 params {
     
     // step
-    step                       = null
-    input_region               = 'all'
+    step                        = null
 
     // Input options
-    input                      = null
-    map                        = null
+    input                       = null
+    input_region                = "all"
+    map                         = null
+    tools                       = null
+
+    // Panel preparation
+    panel                       = null
+    to_phase                    = false
 
     // References
-    genome                     = null
-    igenomes_base              = 's3://ngi-igenomes/igenomes/'
-    igenomes_ignore            = false
+    genome                      = null
+    igenomes_base               = 's3://ngi-igenomes/igenomes/'
+    igenomes_ignore             = false
+    fasta                       = null
+    fasta_fai                   = null
 
     // MultiQC options
-    multiqc_config             = null
-    multiqc_title              = null
-    multiqc_logo               = null
-    max_multiqc_email_size     = '25.MB'
+    multiqc_config              = null
+    multiqc_title               = null
+    multiqc_logo                = null
+    max_multiqc_email_size      = '25.MB'
     multiqc_methods_description = null
 
     // Simulate
-    depth                      = null
-    genotype                   = null
+    depth                       = 1
+    genotype                    = null
 
     // Boilerplate options
-    outdir                     = null
-    publish_dir_mode           = 'copy'
-    email                      = null
-    email_on_fail              = null
-    plaintext_email            = false
-    monochrome_logs            = false
-    hook_url                   = null
-    help                       = false
-    version                    = false
+    outdir                      = null
+    publish_dir_mode            = 'copy'
+    email                       = null
+    email_on_fail               = null
+    plaintext_email             = false
+    monochrome_logs             = false
+    hook_url                    = null
+    help                        = false
+    version                     = false
 
     // Config options
-    config_profile_name        = null
-    config_profile_description = null
-    custom_config_version      = 'master'
-    custom_config_base         = "https://raw.githubusercontent.com/nf-core/configs/${params.custom_config_version}"
-    config_profile_contact     = null
-    config_profile_url         = null
+    config_profile_name         = null
+    config_profile_description  = null
+    custom_config_version       = 'master'
+    custom_config_base          = "https://raw.githubusercontent.com/nf-core/configs/${params.custom_config_version}"
+    config_profile_contact      = null
+    config_profile_url          = null
 
     // Max resource options
     // Defaults only, expecting to be overwritten
-    max_memory                 = '128.GB'
-    max_cpus                   = 16
-    max_time                   = '240.h'
+    max_memory                  = '128.GB'
+    max_cpus                    = 16
+    max_time                    = '240.h'
 
     // Schema validation default options
     validationFailUnrecognisedParams = false
@@ -89,14 +96,6 @@ try {
 //   System.err.println("WARNING: Could not load nf-core/config/phaseimpute profiles: ${params.custom_config_base}/pipeline/phaseimpute.config")
 // }
 
-
-// Load nf-core/phaseimpute custom profiles from different institutions.
-// Warning: Uncomment only if a pipeline-specific institutional config already exists on nf-core/configs!
-// try {
-//   includeConfig "${params.custom_config_base}/pipeline/phaseimpute.config"
-// } catch (Exception e) {
-//   System.err.println("WARNING: Could not load nf-core/config/phaseimpute profiles: ${params.custom_config_base}/pipeline/phaseimpute.config")
-// }
 profiles {
     debug {
         dumpHashes             = true
