NF-core linting pass

--- a/nextflow.config
+++ b/nextflow.config
@@ -20,7 +20,7 @@ params {
 
     // Panel preparation
     panel                       = null
-    to_phase                    = false
+    phased                      = null
 
     // References
     genome                      = null
@@ -82,7 +82,6 @@ includeConfig 'conf/igenomes.config'
 
 // Load nf-core custom profiles from different Institutions
 try {
-    includeConfig "${params.custom_config_base}/nfcore_custom.config"
     includeConfig "${params.custom_config_base}/nfcore_custom.config"
 } catch (Exception e) {
     System.err.println("WARNING: Could not load nf-core/config profiles: ${params.custom_config_base}/nfcore_custom.config")
