Fix link and parameters names

--- a/conf/test.config
+++ b/conf/test.config
@@ -25,9 +25,9 @@ params {
     input  = "../test-datasets/data/bam.csv"
 
     // Genome references
-    genome = "GRCh38"
-    panel  = "https://raw.githubusercontent.com/nf-core/test-datasets/imputation/data/panel/21/1000GP.chr21.noNA12878.s.bcf"
-    to_phase = false
+    genome   = "GRCh38"
+    panel    = "https://raw.githubusercontent.com/nf-core/test-datasets/imputation/data/panel/21_22/1000GP.chr21_22.s.norel.bcf"
+    phased   = true
 
     // Impute parameters
     step   = "impute"
