--- a/conf/test.config
+++ b/conf/test.config
@@ -25,8 +25,8 @@ params {
     input  = "../test-datasets/data/bam.csv"
 
     // Genome references
-    genome   = "GRCh38"
-    panel    = "https://raw.githubusercontent.com/nf-core/test-datasets/imputation/data/panel/21_22/1000GP.chr21_22.s.norel.bcf"
+    fasta    = "https://raw.githubusercontent.com/LouisLeNezet/test-datasets/phaseimpute/data/reference_genome/21_22/hs38DH.chr21_22.s.fa"
+    panel    = "https://raw.githubusercontent.com/LouisLeNezet/test-datasets/phaseimpute/data/panel/21_22/1000GP.chr21_22.s.norel.bcf"
     phased   = true
 
     // Impute parameters
