Update get region and fasta as channel

--- a/nextflow.config
+++ b/nextflow.config
@@ -20,7 +20,9 @@ params {
 
     // Panel preparation
     panel                       = null
+    panel_index                 = null
     phased                      = null
+    panel_chr_rename            = null
 
     // References
     genome                      = null
