--- a/conf/test.config
+++ b/conf/test.config
@@ -25,7 +25,7 @@ params {
     input  = "../test-datasets/data/bam.csv"
 
     // Genome references
-    fasta    = "https://raw.githubusercontent.com/LouisLeNezet/test-datasets/phaseimpute/data/reference_genome/21_22/hs38DH.chr21_22.s.fa"
+    fasta    = "../test-datasets/data/reference_genome/21_22/hs38DH.chr21_22.fa"
     panel    = "https://raw.githubusercontent.com/LouisLeNezet/test-datasets/phaseimpute/data/panel/21_22/1000GP.chr21_22.s.norel.bcf"
     phased   = true
 
