--- a/modules/nf-core/glimpse2/chunk/meta.yml
+++ b/modules/nf-core/glimpse2/chunk/meta.yml
@@ -12,7 +12,7 @@ tools:
       documentation: "https://odelaneau.github.io/GLIMPSE/commands.html"
       tool_dev_url: "https://github.com/odelaneau/GLIMPSE"
       doi: "10.1038/s41588-020-00756-0"
-      licence: "['MIT']"
+      licence: ["MIT"]
 requirements:
   - AVX2
 input:
@@ -36,6 +36,11 @@ input:
       description: |
         Target region, usually a full chromosome (e.g. chr20:1000000-2000000 or chr20).
         For chrX, please treat PAR and non-PAR regions as different choromosome in order to avoid mixing ploidy.
+  - meta2:
+      type: map
+      description: |
+        Groovy Map containing genomic map information
+        e.g. [ map:'GRCh38' ]
   - map:
       type: file
       description: File containing the genetic map.
@@ -58,7 +63,7 @@ output:
       type: file
       description: File containing software versions
       pattern: "versions.yml"
-  - txt:
+  - chunk_chr:
       type: file
       description: Tab delimited output txt file containing buffer and imputation regions.
       pattern: "*.{txt}"
