--- a/.editorconfig
+++ b/.editorconfig
@@ -39,5 +39,5 @@ indent_style = unset
 [/docs/*.xml]
 indent_style = unset
 
-[/docs/images/*.xml]
+[/docs/images/metro/*.xml]
 indent_style = unset
