--- a/conf/test.config
+++ b/conf/test.config
@@ -22,11 +22,11 @@ params {
     // Input data
     // TODO nf-core: Specify the paths to your test data on nf-core/test-datasets
     // TODO nf-core: Give any required params for the test so that command line flags are not needed
-    input  = "../test-datasets/data/bam.csv"
+    input  = "./tests/csv/bam.csv"
 
     // Genome references
-    fasta    = "../test-datasets/data/reference_genome/21_22/hs38DH.chr21_22.fa"
-    panel    = "https://raw.githubusercontent.com/LouisLeNezet/test-datasets/phaseimpute/data/panel/21_22/1000GP.chr21_22.s.norel.bcf"
+    fasta    = "https://raw.githubusercontent.com/nf-core/test-datasets/phaseimpute/data/reference_genome/21_22/hs38DH.chr21_22.fa"
+    panel    = "https://raw.githubusercontent.com/nf-core/test-datasets/phaseimpute/data/panel/21_22/1000GP.chr21_22.s.norel.bcf"
     phased   = true
 
     // Impute parameters
