--- a/conf/test.config
+++ b/conf/test.config
@@ -22,7 +22,7 @@ params {
     // Input data
     // TODO nf-core: Specify the paths to your test data on nf-core/test-datasets
     // TODO nf-core: Give any required params for the test so that command line flags are not needed
-    input  = "./tests/csv/bam.csv"
+    input  = "${projectDir}/tests/csv/bam.csv"
 
     // Genome references
     fasta    = "https://raw.githubusercontent.com/nf-core/test-datasets/phaseimpute/data/reference_genome/21_22/hs38DH.chr21_22.fa"
