--- a/conf/test_panelprep.config
+++ b/conf/test_panelprep.config
@@ -20,7 +20,7 @@ params {
     max_time   = '6.h'
 
     // Input data
-    input              = "tests/csv/panel.csv"
+    input              = "${projectDir}/tests/csv/panel.csv"
     input_region       = "tests/csv/regionsheet.csv"
     outdir             = "results/test_panelprep"
     genome             = "GRCh38"
