Set output to compress format

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -50,7 +50,7 @@ process {
     // Panel preparation workflow
     withName: VIEW_VCF_REGION {
         ext.args = [
-            "-Oz",
+            "--output-type z",
             "--no-version"
         ].join(' ')
         ext.prefix = { "${meta.id}_${meta.region}" }
@@ -69,6 +69,7 @@ process {
             "-m 2",
             "-M 2",
             "-v snps",
+            "--output-type z",
             "--no-version"
         ].join(' ')
         ext.prefix = { "${meta.id}_SPNS" }
@@ -87,6 +88,7 @@ process {
             "-m 2",
             "-M 2",
             "-v snps",
+            "--output-type z",
             "--no-version"
         ].join(' ')
         ext.prefix = { "${meta.id}_SITES" }
