outdir folder fixed as 'results' and TODO tags removed

--- a/conf/test.config
+++ b/conf/test.config
@@ -32,4 +32,7 @@ params {
     // Impute parameters
     step   = "impute"
     tools  = "glimpse1"
+
+    // Output data
+    outdir  = "results"
 }
