--- a/nextflow.config
+++ b/nextflow.config
@@ -14,7 +14,7 @@ params {
 
     // Input options
     input                       = null
-    input_region                = "all"
+    input_region                = null
     map                         = null
     tools                       = null
 
