Update test config

--- a/conf/test.config
+++ b/conf/test.config
@@ -16,16 +16,17 @@ params {
 
     // Limit resources so that this can run on GitHub Actions
     max_cpus   = 2
-    max_memory = '6.GB'
-    max_time   = '6.h'
+    max_memory = '2.GB'
+    max_time   = '1.h'
 
     // Input data
-    input  = "${projectDir}/tests/csv/bam.csv"
+    input        = "${projectDir}/tests/csv/sample_bam.csv"
+    input_region = "${projectDir}/tests/csv/region.csv"
 
     // Genome references
-    fasta    = "https://raw.githubusercontent.com/nf-core/test-datasets/phaseimpute/data/reference_genome/21_22/hs38DH.chr21_22.fa"
-    panel    = "https://raw.githubusercontent.com/nf-core/test-datasets/phaseimpute/data/panel/21_22/1000GP.chr21_22.s.norel.bcf"
-    phased   = true
+    fasta  = "https://raw.githubusercontent.com/nf-core/test-datasets/phaseimpute/data/reference_genome/21_22/hs38DH.chr21_22.fa"
+    panel  = "${projectDir}/tests/csv/panel.csv"
+    phased = true
 
     // Impute parameters
     step   = "impute"
