--- a/conf/test_panelprep.config
+++ b/conf/test_panelprep.config
@@ -24,8 +24,7 @@ params {
     input_region       = "${projectDir}/tests/csv/regionsheet.csv"
     genome             = "GRCh38"
 
-    map                = "/groups/dog/llenezet/test-datasets/data/genetic_maps.b38/chr21.b38.gmap.gz"
-    fasta              = "/groups/dog/llenezet/test-datasets/data/reference_genome/hs38DH.chr21.fa"
+    map                = "${projectDir}/tests/csv/map.csv"
 
     step               = "panelprep"
     tools              = ["glimpse2", "glimpse1"]
