--- a/conf/test.config
+++ b/conf/test.config
@@ -24,7 +24,7 @@ params {
 
     // Genome references
     fasta    = "https://raw.githubusercontent.com/nf-core/test-datasets/phaseimpute/data/reference_genome/21_22/hs38DH.chr21_22.fa"
-    panel    = "https://raw.githubusercontent.com/nf-core/test-datasets/phaseimpute/data/panel/21_22/1000GP.chr21_22.s.norel.bcf"
+    panel    = "${projectDir}/tests/csv/panel.csv"
     phased   = true
 
     // Impute parameters
