Simulation downsampling working

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -35,13 +35,13 @@ process {
         ]
     }
 
-    // Simulate workflow
-    withName: VIEW_REGION {
+    // Simulation workflow
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_REGION:SAMTOOLS_VIEW' {
         ext.args = [
         ].join(' ')
         ext.prefix = { "${meta.id}_R${meta.region}" }
     }
-    withName: VIEW_DEPTH {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_DOWNSAMPLE:SAMTOOLS_VIEW' {
         ext.args = [
         ].join(' ')
         ext.prefix = { "${meta.id}_D${meta.depth}" }
