--- a/conf/test_sim.config
+++ b/conf/test_sim.config
@@ -21,9 +21,8 @@ params {
 
     // Input data
     input                = "${projectDir}/tests/csv/sample_sim.csv"
-    input_region_file    = "${projectDir}/tests/csv/region.csv"
+    input_region         = "${projectDir}/tests/csv/region.csv"
     depth                = 1
-    genome               = "GRCh38"
 
     map                  = "${projectDir}/tests/csv/map.csv"
     fasta                = "https://raw.githubusercontent.com/nf-core/test-datasets/phaseimpute/data/reference_genome/21_22/hs38DH.chr21_22.fa"
