Add auto detection of chr prefix and auto fixing

--- a/nextflow.config
+++ b/nextflow.config
@@ -22,7 +22,7 @@ params {
     panel                       = null
     panel_index                 = null
     phased                      = null
-    panel_chr_rename            = null
+    rename_chr                  = false
 
     // References
     genome                      = null
