Add validation step

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -143,10 +143,10 @@ process {
     withName: GLIMPSE_LIGATE {
         ext.prefix = { "${meta.id}_D${meta.depth}_P${meta.panel}" }
     }
-    withName: GLIMPSE_CONCORDANCE {
-        ext.prefix = { "${meta.id}_D${meta.depth}_P${meta.panel}_R${meta.region}" }
+    withName: GLIMPSE2_CONCORDANCE {
+        ext.prefix = { "${meta.id}_D${meta.depth}_P${meta.panel}_R${meta.region.replace(':','_')}" }
     }
     withName: ADD_COLUMNS {
-        ext.prefix = { "${meta.id}_D${meta.depth}_P${meta.panel}_R${meta.region}_SNP" }
+        ext.prefix = { "${meta.id}_D${meta.depth}_P${meta.panel}_R${meta.region.replace(':','_')}_SNP" }
     }
 }
