--- a/conf/test_validate.config
+++ b/conf/test_validate.config
@@ -5,13 +5,13 @@
     Defines input files and everything required to run a fast and simple pipeline test.
 
     Use as follows:
-        nextflow run nf-core/phaseimpute -profile test_sim,<docker/singularity> --outdir <OUTDIR>
+        nextflow run nf-core/phaseimpute -profile test_validate,<docker/singularity> --outdir <OUTDIR>
 
 ----------------------------------------------------------------------------------------
 */
 
 params {
-    config_profile_name        = 'Test simulation / imputation / validation mode'
+    config_profile_name        = 'Test validation mode'
     config_profile_description = 'Minimal test dataset to check pipeline function'
 
     // Limit resources so that this can run on GitHub Actions
@@ -30,6 +30,5 @@ params {
     phased = true
     map                  = "${projectDir}/tests/csv/map.csv"
 
-    step                 = "all"
-    tools                = "glimpse1"
+    step                 = "validate"
 }
