Update default compression of annotate and shema extension of panel index

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -56,7 +56,7 @@ process {
         ext.prefix = { "${meta.id}_${meta.region}" }
     }
 
-    withName: 'VCF_CHR_CHECK:VCF_CHR_RENAME:BCFTOOLS_ANNOTATE' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CHR_CHECK:VCF_CHR_RENAME:BCFTOOLS_ANNOTATE' {
         ext.args = [
             "-Oz",
             "--no-version"
