Update config files for nf-test

--- a/subworkflows/local/vcf_chr_rename/tests/nextflow.config
+++ b/subworkflows/local/vcf_chr_rename/tests/nextflow.config
@@ -1,3 +1,13 @@
 params {
     max_memory = '7.GB'
 }
+
+process {
+    withName: BCFTOOLS_ANNOTATE {
+        ext.args = [
+            "-Oz",
+            "--no-version"
+        ].join(' ')
+        ext.prefix = { "${meta.id}_chrrename" }
+    }
+}
