--- a/modules/local/faitochr/environment.yml
+++ b/modules/local/faitochr/environment.yml
@@ -1,7 +1,7 @@
-name: vcfchrextract
+name: faitochr
 channels:
   - conda-forge
   - bioconda
   - defaults
 dependencies:
-  - bioconda::bcftools=1.18
+  - anaconda::gawk=5.1.0
