--- a/nextflow.config
+++ b/nextflow.config
@@ -189,9 +189,10 @@ profiles {
         executor.cpus          = 4
         executor.memory        = 8.GB
     }
-    test      { includeConfig 'conf/test.config'      }
-    test_full { includeConfig 'conf/test_full.config' }
-    test_sim  { includeConfig 'conf/test_sim.config'  }
+    test       { includeConfig 'conf/test.config'      }
+    test_full  { includeConfig 'conf/test_full.config' }
+    test_sim   { includeConfig 'conf/test_sim.config'  }
+    test_quilt { includeConfig 'conf/test_quilt.config'  }
 }
 
 // Set default registry for Apptainer, Docker, Podman and Singularity independent of -profile
