--- a/nextflow.config
+++ b/nextflow.config
@@ -262,6 +262,7 @@ manifest {
 
 // Load modules.config for DSL2 module specific options
 includeConfig 'conf/modules.config'
+includeConfig 'conf/quilt_subworkflow.config'
 
 // Function to ensure that resource requirements don't go beyond
 // a maximum limit
