modify config modules quilt subworkflow

--- a/conf/quilt_subworkflow.config
+++ b/conf/quilt_subworkflow.config
@@ -20,7 +20,7 @@ process {
         ]
     }
 
-    withName: '.*:MAKE_CHUNKS:GLIMPSE_CHUNK' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:MAKE_CHUNKS:GLIMPSE_CHUNK' {
         publishDir = [
             [
                 path: { "${params.outdir}/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" },
@@ -29,44 +29,45 @@ process {
         ]
     }
 
-    withName: '.*:MAKE_CHUNKS:BCFTOOLS_INDEX' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:MAKE_CHUNKS:BCFTOOLS_INDEX' {
         cpus          = 2
         memory        = 400.MB
         maxRetries    = 2
     }
 
-    withName: '.*:MAKE_CHUNKS:BCFTOOLS_INDEX_2' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:MAKE_CHUNKS:BCFTOOLS_INDEX_2' {
         ext.args      = '--tbi'
         cpus          = 2
         memory        = 400.MB
         maxRetries    = 2
     }
 
-    withName: '.*:MAKE_CHUNKS:BCFTOOLS_INDEX_3' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:MAKE_CHUNKS:BCFTOOLS_INDEX_3' {
         ext.args      = '--tbi'
         cpus          = 2
         memory        = 400.MB
         maxRetries    = 2
     }
 
-    withName: '.*:MAKE_CHUNKS:BCFTOOLS_VIEW' {
-        ext.args      = '-v snps'
-        ext.prefix    = { "${meta.id}_biallelic" }
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:MAKE_CHUNKS:BCFTOOLS_VIEW' {
+        ext.args      = '-v snps -Oz'
+        ext.prefix    = { "${meta.id}_${meta.chr}_biallelic" }
         cpus          = 2
         memory        = 400.MB
         maxRetries    = 2
     }
 
-    withName: '.*:MAKE_CHUNKS:BCFTOOLS_NORM' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:MAKE_CHUNKS:BCFTOOLS_NORM' {
         ext.args      = '-m +any --output-type z'
-        ext.prefix    = { "${meta.id}_multiallelic" }
+        ext.prefix    = { "${meta.id}_${meta.chr}_multiallelic" }
         cpus          = 2
         memory        = 400.MB
         maxRetries    = 2
     }
 
-    withName: '.*:MAKE_CHUNKS:BCFTOOLS_CONVERT' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:MAKE_CHUNKS:BCFTOOLS_CONVERT' {
         ext.args = '--haplegendsample test'
+        ext.prefix    = { "${meta.id}_${meta.chr}_convert" }
         cpus          = 2
         memory        = 400.MB
         maxRetries    = 2
@@ -79,7 +80,7 @@ process {
         ]
     }
 
-    withName: '.*:IMPUTE_QUILT:QUILT_QUILT' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:IMPUTE_QUILT:QUILT_QUILT' {
         publishDir = [
             [
                 path: { "${params.outdir}/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" },
@@ -88,14 +89,14 @@ process {
         ]
     }
 
-    withName: '.*:CONCATENATE_VCF:BCFTOOLS_INDEX' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCATENATE_VCF:BCFTOOLS_INDEX' {
         ext.args     = {[
                         "--tbi",
                         ].join(" ").trim()}
     }
 
 
-    withName: '.*:CONCATENATE_VCF:BCFTOOLS_CONCAT' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCATENATE_VCF:BCFTOOLS_CONCAT' {
         ext.args = {[
             "--ligate",
             "--output-type z",
