gather all quilt outputs in subdirectory

--- a/conf/quilt_subworkflow.config
+++ b/conf/quilt_subworkflow.config
@@ -23,7 +23,7 @@ process {
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:MAKE_CHUNKS:GLIMPSE_CHUNK' {
         publishDir = [
             [
-                path: { "${params.outdir}/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" },
+                path: { "${params.outdir}/quilt_impute/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" },
                 mode: params.publish_dir_mode,
             ],
         ]
@@ -74,7 +74,7 @@ process {
 
         publishDir = [
             [
-                path: { "${params.outdir}/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}/convert" },
+                path: { "${params.outdir}/quilt_impute/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}/convert" },
                 mode: params.publish_dir_mode,
             ],
         ]
@@ -83,7 +83,7 @@ process {
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:IMPUTE_QUILT:QUILT_QUILT' {
         publishDir = [
             [
-                path: { "${params.outdir}/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" },
+                path: { "${params.outdir}/quilt_impute/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" },
                 mode: params.publish_dir_mode,
             ],
         ]
@@ -108,7 +108,7 @@ process {
 
         publishDir = [
             [
-                path: { "${params.outdir}/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}/concat" },
+                path: { "${params.outdir}/quilt_impute/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}/concat" },
                 mode: params.publish_dir_mode,
             ],
         ]
