add ngen and buffer as external params with defaults

--- a/nextflow.config
+++ b/nextflow.config
@@ -42,6 +42,10 @@ params {
     depth                       = 1
     genotype                    = null
 
+    // QUILT
+    ngen                       = 100
+    buffer                     = 10000
+
     // Boilerplate options
     outdir                      = null
     publish_dir_mode            = 'copy'
