Separate simulation config

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -35,18 +35,6 @@ process {
         ]
     }
 
-    // Simulation workflow
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_REGION:SAMTOOLS_VIEW' {
-        ext.args = [
-        ].join(' ')
-        ext.prefix = { "${meta.id}_R${meta.region}" }
-    }
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_DOWNSAMPLE:SAMTOOLS_VIEW' {
-        ext.args = [
-        ].join(' ')
-        ext.prefix = { "${meta.id}_D${meta.depth}" }
-    }
-
     // Panel preparation workflow
     withName: VIEW_VCF_REGION {
         ext.args = [
@@ -127,6 +115,10 @@ process {
     }
 
     withName: GLIMPSE_PHASE {
+        publishDir = [
+            path: { "${params.outdir}/imputation/glimpse1" },
+            mode: params.publish_dir_mode
+        ]
         ext.args = [
             "--impute-reference-only-variants"
         ].join(' ')
@@ -134,6 +126,10 @@ process {
         ext.suffix = "bcf"
     }
     withName: GLIMPSE_CHUNK {
+        publishDir = [
+            path: { "${params.outdir}/imputation/glimpse1" },
+            mode: params.publish_dir_mode
+        ]
         ext.args = [
             "--window-size 200000",
             "--buffer-size 20000"
@@ -141,12 +137,24 @@ process {
         ext.prefix = { "${meta.id}" }
     }
     withName: GLIMPSE_LIGATE {
+        publishDir = [
+            path: { "${params.outdir}/imputation/glimpse1" },
+            mode: params.publish_dir_mode
+        ]
         ext.prefix = { "${meta.id}_D${meta.depth}_P${meta.panel}" }
     }
-    withName: GLIMPSE2_CONCORDANCE {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CONCORDANCE_GLIMPSE2:GLIMPSE2_CONCORDANCE' {
+        publishDir = [
+            path: { "${params.outdir}/validation/concordance" },
+            mode: params.publish_dir_mode
+        ]
         ext.prefix = { "${meta.id}_D${meta.depth}_P${meta.panel}_R${meta.region.replace(':','_')}" }
     }
     withName: ADD_COLUMNS {
+        publishDir = [
+            path: { "${params.outdir}/validation" },
+            mode: params.publish_dir_mode
+        ]
         ext.prefix = { "${meta.id}_D${meta.depth}_P${meta.panel}_R${meta.region.replace(':','_')}_SNP" }
     }
 }
