--- a/nextflow.config
+++ b/nextflow.config
@@ -262,6 +262,11 @@ manifest {
 // Load modules.config for DSL2 module specific options
 includeConfig 'conf/modules.config'
 
+
+// simulation step
+includeConfig 'conf/modules/simulation.config'
+
+
 // Function to ensure that resource requirements don't go beyond
 // a maximum limit
 def check_max(obj, type) {
