--- a/conf/test_quilt.config
+++ b/conf/test_quilt.config
@@ -5,7 +5,7 @@
     Defines input files and everything required to run a fast and simple pipeline test.
 
     Use as follows:
-        nextflow run nf-core/phaseimpute -profile test,<docker/singularity> --outdir <OUTDIR>
+        nextflow run nf-core/phaseimpute -profile test_quilt,<docker/singularity> --outdir <OUTDIR>
 
 ----------------------------------------------------------------------------------------
 */
