Separate configuration into each step and use full path

--- a/nextflow.config
+++ b/nextflow.config
@@ -262,10 +262,17 @@ manifest {
 // Load modules.config for DSL2 module specific options
 includeConfig 'conf/modules.config'
 
-
 // simulation step
 includeConfig 'conf/modules/simulation.config'
 
+// panel_prep step
+includeConfig 'conf/modules/panel_prep.config'
+
+// imputation step
+includeConfig 'conf/modules/imputation.config'
+
+// validation step
+includeConfig 'conf/modules/validation.config'
 
 // Function to ensure that resource requirements don't go beyond
 // a maximum limit
