Update conf files

--- a/conf/modules/panel_prep.config
+++ b/conf/modules/panel_prep.config
@@ -12,11 +12,22 @@
 
 process {
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CHR_CHECK:VCF_CHR_RENAME:BCFTOOLS_ANNOTATE' {
+        publishDir = [
+            path: { "${params.outdir}/prep_panel" },
+            mode: params.publish_dir_mode
+        ]
         ext.args = [
             "-Oz",
             "--no-version"
         ].join(' ')
         ext.prefix = { "${meta.id}_chrrename" }
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GET_PANEL:*' {
+        publishDir = [
+            path: { "${params.outdir}/prep_panel" },
+            mode: params.publish_dir_mode
+        ]
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GET_PANEL:BCFTOOLS_NORM' {
