--- a/conf/modules/imputation.config
+++ b/conf/modules/imputation.config
@@ -13,6 +13,10 @@
 process {
     // Configuration for the glimpse1 imputation subworkflow
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_INPUT:BCFTOOLS_MPILEUP' {
+        publishDir = [
+            path: { "${params.outdir}/imputation/glimpse1" },
+            mode: params.publish_dir_mode
+        ]
         ext.args = [
             "-I",
             "-E",
@@ -24,11 +28,13 @@ process {
         ].join(' ')
     }
 
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:GLIMPSE_CHUNK' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:*' {
         publishDir = [
             path: { "${params.outdir}/imputation/glimpse1" },
             mode: params.publish_dir_mode
         ]
+    }
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:GLIMPSE_CHUNK' {
         ext.args = [
             "--window-size 200000",
             "--buffer-size 20000"
@@ -37,10 +43,6 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:GLIMPSE_PHASE' {
-        publishDir = [
-            path: { "${params.outdir}/imputation/glimpse1" },
-            mode: params.publish_dir_mode
-        ]
         ext.args = [
             "--impute-reference-only-variants"
         ].join(' ')
@@ -49,10 +51,6 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:GLIMPSE_LIGATE' {
-        publishDir = [
-            path: { "${params.outdir}/imputation/glimpse1" },
-            mode: params.publish_dir_mode
-        ]
         ext.prefix = { "${meta.id}_D${meta.depth}_P${meta.panel}" }
     }
 }
