--- a/nextflow.config
+++ b/nextflow.config
@@ -42,6 +42,11 @@ params {
     depth                       = 1
     genotype                    = null
 
+    // Validation
+    bins                        = "0 0.01 0.05 0.1 0.2 0.5"
+    min_val_gl                  = 0.9
+    min_val_dp                  = 5
+
     // Boilerplate options
     outdir                      = null
     publish_dir_mode            = 'copy'
@@ -189,9 +194,10 @@ profiles {
         executor.cpus          = 4
         executor.memory        = 8.GB
     }
-    test      { includeConfig 'conf/test.config'      }
-    test_full { includeConfig 'conf/test_full.config' }
-    test_sim  { includeConfig 'conf/test_sim.config'  }
+    test          { includeConfig 'conf/test.config'      }
+    test_full     { includeConfig 'conf/test_full.config' }
+    test_sim      { includeConfig 'conf/test_sim.config'  }
+    test_validate { includeConfig 'conf/test_validate.config' }
 }
 
 // Set default registry for Apptainer, Docker, Podman and Singularity independent of -profile
